mType/tests/testFiles/import/error/modules/casesensitive.mt
class CaseSensitiveClass {
    fun test(): String {
        return "case sensitive";
    }
}
